--- a/ HomeWork_1/app/src/main/res/values/strings.xml
+++ b/ HomeWork_1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HomeWorkOne</string>
+    <string name="load_data">Загрузить контакты</string>
+    <string name="loading_data">Загрузка контактов</string>
+    <string name="error_data">Ошибка загрузки данных</string>
 </resources>
