--- a/HomeWork_2/WorkChat/src/main/res/values/strings.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">WorkChat</string>
     <string name="add_emoji">Добавить эмоджи</string>
+    <string name="write_message">Написать…</string>
+
+    <string name="dev_start_dialogs_activity">Открыть активность диалога</string>
 </resources>
