--- a/HomeWork_2/WorkChat/src/main/res/values/strings.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">WorkChat</string>
     <string name="add_emoji">Добавить эмоджи</string>
     <string name="write_message">Написать…</string>
+    <string name="deleted_message">Сообщение удалено</string>
+    <string name="deleted_name">Неизвестно</string>
 
     <string name="dev_start_dialogs_activity">Открыть активность диалога</string>
 </resources>
