Код переписан на фрагменты

--- a/HomeWork_2/WorkChat/src/main/res/values/strings.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
     <string name="app_name">WorkChat</string>
+    <string name="profile">Профиль</string>
+
     <string name="add_emoji">Добавить эмоджи</string>
     <string name="write_message">Написать…</string>
+    <string name="log_out">Выйти</string>
+
     <string name="deleted_user">Неизвестно</string>
     <string name="deleted_message">Сообщение удалено</string>
 
-    <string name="dev_start_dialogs_activity">Открыть активность диалога</string>
+    <string name="sample_username">Имя Фамилия</string>
+    <string name="sample_about">In a meeting</string>
+    <string name="sample_status">online</string>
 </resources>
