--- a/HomeWork_2/WorkChat/src/main/res/values/strings.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">WorkChat</string>
     <string name="profile">Профиль</string>
 
+    <string name="search">Поиск</string>
+    <string name="channels">Каналы</string>
+
     <string name="add_emoji">Добавить эмоджи</string>
     <string name="write_message">Написать…</string>
     <string name="log_out">Выйти</string>
