RxJava и обработка ошибок для диалога выбора реакций

--- a/HomeWork_2/WorkChat/src/main/res/values/strings.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="offline">Не в сети</string>
 
     <string name="no_messages">Нет сообщений</string>
+    <string name="no_reactions">Нет доступных реакций</string>
     <string name="hide">Скрыть</string>
     <string name="retry">Повторить</string>
 
