Добавлена ELM-архитектура для каналов, людей, профилей

--- a/HomeWork_2/WorkChat/src/main/res/values/strings.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="idle">Idle</string>
 
     <string name="no_messages">Нет сообщений</string>
+    <string name="no_channels">Нет каналов</string>
+    <string name="no_people">Нет людей</string>
     <string name="hide">Скрыть</string>
     <string name="retry">Повторить</string>
 
